# LANChat

./: .gitignore  DEV_PLAN.md  LAN_CHAT_PLAN.md  docker-compose.yml  fix.md
client/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: auth.rs  file.rs  mod.rs  notification.rs  tray.rs
client/src/__tests__/: auth.test.ts  chat.test.ts  nav.test.ts
client/src/components/: Admin.css  Admin.tsx  Chat.css  Chat.tsx  Contacts.css  Contacts.tsx  ConversationList.css  ConversationList.tsx  ErrorBoundary.tsx  GroupSettings.tsx  Groups.css  Groups.tsx  Layout.css  Layout.tsx  Login.css  Login.tsx  NavRail.css  NavRail.tsx  ProtectedRoute.tsx  Register.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  VoiceCall.css  VoiceCall.tsx
client/src/hooks/: callSignalingBus.ts  useWebRTC.ts  useWebSocket.ts
client/src/services/: api.ts
client/src/stores/: auth.ts  call.ts  chat.ts  contacts.ts  nav.ts
client/src/types/: api.ts  models.ts
client/src/utils/: format.ts  notification.ts
docker/nginx/conf.d/: default.conf
docs/compose/plans/: 2025-07-15-auth-api-implementation.md
server/: .env.example  Cargo.toml  Dockerfile
server/crates/lanchat-api/: Cargo.toml
server/crates/lanchat-api/src/: error.rs  main.rs
server/crates/lanchat-api/src/middleware/: admin.rs  auth.rs  mod.rs
server/crates/lanchat-api/src/routes/: admin.rs  auth.rs  files.rs  groups.rs  messages.rs  mod.rs  ws.rs
server/crates/lanchat-common/: Cargo.toml
server/crates/lanchat-common/src/: auth.rs  error.rs  lib.rs  protocol.rs  types.rs
server/crates/lanchat-core/: Cargo.toml
server/crates/lanchat-core/src/: lib.rs
server/crates/lanchat-core/src/models/: mod.rs
server/crates/lanchat-core/src/repository/: file_repository.rs  group_repository.rs  message_repository.rs  mod.rs  user_repository.rs
server/crates/lanchat-core/src/services/: auth.rs  file.rs  group.rs  message.rs  mod.rs  user.rs
server/crates/lanchat-db/: Cargo.toml
server/crates/lanchat-db/src/: lib.rs  pool.rs  redis.rs
server/crates/lanchat-protocol/: Cargo.toml
server/crates/lanchat-protocol/src/: lib.rs  protocol.rs  types.rs
server/migrations/: 001_create_users.sql  002_create_groups.sql  003_create_messages.sql  004_create_files.sql  005_update_users_required_fields.sql  006_fix_user_foreign_keys.sql  007_setup_admin_account.sql  008_setup_company_group.sql
