[package]
name = "lanchat-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "lanchat-api"
path = "src/main.rs"

[dependencies]
lanchat-core = { path = "../lanchat-core" }
lanchat-db = { path = "../lanchat-db" }
lanchat-common = { path = "../lanchat-common" }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
fred.workspace = true
sqlx.workspace = true
futures-util.workspace = true
chrono.workspace = true
image.workspace = true
regex.workspace = true
