[package]
name = "lanchat-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lanchat-protocol = { path = "../lanchat-protocol" }
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rand.workspace = true
sqlx.workspace = true
