[package]
name = "lanchat-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lanchat-common = { path = "../lanchat-common" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
